--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 cryptography==46.0.3
+dkimpy==1.1.8
 gitdb==4.0.12
 GitPython==3.1.45
 idna==3.11
